--- a/de.uni_paderborn.fujaba.muml.verification.uppaal.mtctl.edit.properties/plugin.xml
+++ b/de.uni_paderborn.fujaba.muml.verification.uppaal.mtctl.edit.properties/plugin.xml
@@ -28,7 +28,7 @@
       <propertyTabs contributorId="de.uni_paderborn.fujaba.muml.common.properties">
           <propertyTab
              category="domain"
-             id="property.tab.mtctl"
+             id="mtctl"
              label="Mtctl"/>
           
       </propertyTabs>
@@ -42,8 +42,8 @@
           <propertySection
             class="de.uni_paderborn.fujaba.properties.runtime.sections.ObjectPropertySection"
             filter="de.uni_paderborn.fujaba.muml.verification.uppaal.mtctl.properties.tabs.MtctlTabElementFilter"
-            id="property.tab.mtctl"
-            tab="property.tab.mtctl">
+            id="mtctl"
+            tab="mtctl">
              <input
                type="org.eclipse.emf.ecore.EObject">
              </input>
