worked on #1137 - added messageDiscarded predicate

--- a/de.uni_paderborn.fujaba.muml.verification.uppaal.mtctl.edit.properties/plugin.xml
+++ b/de.uni_paderborn.fujaba.muml.verification.uppaal.mtctl.edit.properties/plugin.xml
@@ -138,6 +138,11 @@
        </propertyEditor>
     
        <propertyEditor
+             factory="de.uni_paderborn.fujaba.muml.verification.uppaal.mtctl.properties.Predicates.editor.MessageDiscardedExprEditor$Factory"
+             type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl/Predicates#MessageDiscardedExpr">
+       </propertyEditor>
+    
+       <propertyEditor
              factory="de.uni_paderborn.fujaba.muml.verification.uppaal.mtctl.properties.Quantifiers.editor.AFExprEditor$Factory"
              type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl/Quantifiers#AFExpr">
        </propertyEditor>
