--- a/de.uni_paderborn.fujaba.muml.verification.uppaal.mtctl.edit/plugin.properties
+++ b/de.uni_paderborn.fujaba.muml.verification.uppaal.mtctl.edit/plugin.properties
@@ -124,3 +124,5 @@ _UI_MumlElemExpr_instance_feature = Instance
 _UI_SubinstanceSetExpr_type = Subinstance Set Expr
 _UI_SubinstanceSetExpr_type_feature = Type
 _UI_ConnectorOverflowExpr_type = Connector Overflow Expr
+_UI_MessageDiscardedExpr_type = Message Discarded Expr
+_UI_MessageDiscardedExpr_buffer_feature = Buffer
