--- a/de.uni_paderborn.fujaba.muml.verification.extension.edit.properties/plugin.xml
+++ b/de.uni_paderborn.fujaba.muml.verification.extension.edit.properties/plugin.xml
@@ -29,7 +29,7 @@
 
 
 
- <extension point="de.uni_paderborn.fujaba.properties.runtime.propertyEditors">
+ <extension point="org.muml.ape.runtime.propertyEditors">
     <propertyEditors>
     
        <propertyEditor
@@ -57,7 +57,7 @@
 
 
  <extension
-       point="de.uni_paderborn.fujaba.properties.runtime.metamodelContributor">
+       point="org.muml.ape.runtime.metamodelContributor">
     <metamodel
           contributor="de.uni_paderborn.fujaba.muml.verification.extension.properties.metamodel.MetamodelContributor">
     </metamodel>
@@ -65,7 +65,7 @@
 
 
  <extension
-       point="de.uni_paderborn.fujaba.properties.runtime.creationConstraintContributor">
+       point="org.muml.ape.runtime.creationConstraintContributor">
     <constraint
           contributor="de.uni_paderborn.fujaba.muml.verification.extension.properties.constraint.CreationConstraintContributor">
     </constraint>
