--- a/de.uni_paderborn.fujaba.muml.verification.uppaal.mtctl.edit.properties/plugin.xml
+++ b/de.uni_paderborn.fujaba.muml.verification.uppaal.mtctl.edit.properties/plugin.xml
@@ -54,7 +54,7 @@
 
 
 
- <extension point="de.uni_paderborn.fujaba.properties.runtime.propertyEditors">
+ <extension point="org.muml.ape.runtime.propertyEditors">
     <propertyEditors>
     
        <propertyEditor
@@ -262,7 +262,7 @@
 
 
  <extension
-       point="de.uni_paderborn.fujaba.properties.runtime.metamodelContributor">
+       point="org.muml.ape.runtime.metamodelContributor">
     <metamodel
           contributor="de.uni_paderborn.fujaba.muml.verification.uppaal.mtctl.properties.metamodel.MetamodelContributor">
     </metamodel>
@@ -270,7 +270,7 @@
 
 
  <extension
-       point="de.uni_paderborn.fujaba.properties.runtime.creationConstraintContributor">
+       point="org.muml.ape.runtime.creationConstraintContributor">
     <constraint
           contributor="de.uni_paderborn.fujaba.muml.verification.uppaal.mtctl.properties.constraint.CreationConstraintContributor">
     </constraint>
