[Renaming] [ModelMigration] Rename plugins and features using Refactoring; adapting all other plugins//features.

--- a/de.uni_paderborn.fujaba.muml.verification.uppaal.mtctl/plugin.xml
+++ b/de.uni_paderborn.fujaba.muml.verification.uppaal.mtctl/plugin.xml
@@ -8,7 +8,7 @@
 
 
    <extension
-         point="de.uni_paderborn.fujaba.ecore.migration.migrator">
+         point="org.muml.emm.migrator">
       <Migrator
             file="model/Mtctl.migrator">
       </Migrator>
