--- a/org.muml.uppaal.adapter.extension.edit.properties/.project
+++ b/org.muml.uppaal.adapter.extension.edit.properties/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>de.uni_paderborn.fujaba.muml.verification.extension.edit.properties</name>
+	<name>org.muml.uppaal.adapter.extension.edit.properties</name>
 	<comment></comment>
 	<projects>
 	</projects>
